--- a/WebApplication/bin/WebApplication.dll.config
+++ b/WebApplication/bin/WebApplication.dll.config
@@ -78,8 +78,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="data source=JACE-THE-ACE\SQLEXPRESS;initial catalog=ProductionDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+   
+  <add name="DatabaseContext" connectionString="data source=JACE-THE-ACE\SQLEXPRESS;initial catalog=ProductionDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
